Updated README to remove "Line of Fire" and add "Real Time Tactics"

--- a/README
+++ b/README
@@ -1,19 +1,19 @@
 Welcome to Real Time Tactics!
 
-Line of Fire is a turn based strategy Free Software game for (current list):
+Real Time Tactics is a real-time/turn based based strategy Free Software game for (current list):
 - GNU / Linux
 
 The game's source can be found at:
 
 (tarball)
-https://github.com/altf4/LineOfFire/zipball/master
+https://github.com/altf4/RealTimeTactics/zipball/master
 
 (git)
-git://github.com/altf4/LineOfFire.git
+git://github.com/altf4/RealTimeTactics.git
 
 The game's Wiki can be found here:
-https://github.com/altf4/LineOfFire/wiki
+https://github.com/altf4/RealTimeTactics/wiki
 
 Bugs can be viewed / reported here:
-https://github.com/altf4/LineOfFire/issues
+https://github.com/altf4/RealTimeTactics/issues
 
