HACKING: Updated to reflect current changes

--- a/HACKING
+++ b/HACKING
@@ -20,28 +20,7 @@ sudo yum install sparsehash-devel gtkmm30-devel openssl-devel boost-devel boost-
 OGRE 3D
 ########################
 
-***Instructions for Ubuntu 11.10/12.04***
-The version of OGRE in the default Ubuntu repositories is old / incomplete. So instead, we use the offical OGRE PPA, avaialble form here:
-
-https://launchpad.net/~ogre-team/+archive/ogre
-
-Also, we require (for now) the OGRE sample media packs:
-
-sudo apt-get install ogre-samples-media ogre-samples-source
-
-***Instructions for Fedora 16/17 and openSUSE 12.1***
-The current version in the F16/17 repository is 1.7.3(the Ogre Ubuntu PPA is 1.7.4).
-1.7.4 is available only in Rawhide or via the openSUSE build service: https://build.opensuse.org/
-In most cases 1.7.3 will work just fine.
-
-sudo yum install ogre-devel ois-devel
-
-Also, we require (for now) the OGRE sample media packs:
-
-sudo yum install ogre-samples
-
-***Instructions for building OGRE from source***
-This should be compatable with all versions of OGRE starting at 1.7.3, tested up to 1.8.0 on Fedora 17. 
+RTT_Client_OGRE relies on OGRE version 1.8.0, which is currently available only as source. 
 
 OGRE Source can be downloaded here: http://www.ogre3d.org/download/source
 
@@ -52,6 +31,16 @@ You need CMake (http://www.cmake.org). In a console, type:
 > cmake ..
 > make
 > make install
+
+
+RTT_Client_OGRE also requires CEGUI, currently version 0.7.6 found here:
+
+http://www.cegui.org.uk/wiki/index.php/CEGUI_Downloads_0.7.6
+
+Unpack the archive, and run:
+> ./configure
+> make
+> sudo make install
 
 ###########################
 Building Using Eclipse:
